compose: Fix flashing effect on trying to send message that's too long.
Due to a wrong CSS selector, the expected red outline flashing effect
was not being applied to the compose box when the user tried to send a
message that was longer than the maximum allowed length. Also, the
iteration count is set to 3 instead of relying on the duration the CSS
class is applied, to ensure exactly 3 flashes without any glitches.

--- a/web/styles/compose.css
+++ b/web/styles/compose.css
@@ -292,10 +292,10 @@
     &:has(.new_message_textarea.over_limit),
     &:has(.new_message_textarea.over_limit:focus) {
         box-shadow: 0 0 0 1pt hsl(0deg 76% 65%);
+    }
 
-        &.flash {
-            animation: message-limit-flash 0.5s ease-in-out infinite;
-        }
+    &:has(.new_message_textarea.over_limit.flash) {
+        animation: message-limit-flash 0.5s ease-in-out 3;
     }
 
     &:has(.new_message_textarea.invalid),
